--- a/.github/workflows/recent-blogs-to-readme.yml
+++ b/.github/workflows/recent-blogs-to-readme.yml
@@ -1,7 +1,7 @@
 name: Update Recent Blogs to README
 on:
   schedule: # Run workflow automatically
-    - cron: "0 0 * * 1" # Runs every week, At 00:00 on Monday.
+    - cron: "00 15 * * *" # Runs every day at 3pm UTC.
   workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the GitHub Actions Workflow page directly
 permissions:
   contents: write # To write the generated contents to the readme
